<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/tools"
    android:id="@+id/navigation_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="@bool/fitsSystemWindows"
    android:background="@color/md_yellow_700">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_bar_height"
            android:background="?colorPrimary"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/status_bar_height"
        android:background="@color/md_red_900"
        android:foregroundTintMode="src_over">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/md_amber_800"
            android:elevation="4dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ToolbarTheme" />

        <TextView
            android:layout_width="157dp"
            android:layout_height="66dp"
            android:text="SAG app"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal|top"
            android:textColor="#ffffff"
            android:textSize="35dp"
            android:layout_marginTop="100dp"
            android:textAlignment="center" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnok"
            android:layout_width="82dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|bottom"
            android:longClickable="true"
            android:src="@mipmap/ic_done_black_24dp"

            android:visibility="visible"
            app:backgroundTint="@color/md_yellow_900"
            fab:fab_colorPressed=""
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:onClick="onClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Calc1"
            android:id="@+id/textView9"
            android:layout_gravity="left|top"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="15dp"
            android:singleLine="false"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Calc2"
            android:id="@+id/textView10"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="100dp"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultado"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="100dp"
            android:layout_marginRight="50dp"
            android:textColor="#ffffff" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/modal"
            android:layout_width="fill_parent"
            android:layout_height="170dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="70dp"
            android:onClick="onRadioButtonClicked">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xc"
            android:id="@+id/XC"
            android:layout_gravity="center_vertical"
            android:checked="false"
            android:textColor="#ffffff" />

            <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/am"
            android:id="@+id/am"
            android:layout_gravity="left|center_vertical"
            android:layout_marginTop="0dp"
            android:checked="false"
            android:textColor="#ffffff" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Enduro"
                android:id="@+id/Enduro"
                android:layout_marginTop="0dp"
                android:checked="false"
                android:textColor="#ffffff" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dh"
                android:id="@+id/descenso"
                android:layout_marginTop="0dp"
                android:checked="false"
                android:textColor="#ffffff" />
        </RadioGroup>

        <EditText
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/distancia"
            android:layout_gravity="right|top"
            android:layout_marginTop="180dp"
            android:layout_marginRight="40dp" />

    </FrameLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="@bool/fitsSystemWindows"
        app:headerLayout="@layout/navigation_drawer_header"
        app:menu="@menu/navigation_drawer_menu"
        app:theme="@style/NavigationViewTheme" />

</android.support.v4.widget.DrawerLayout>

