<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/tools"
    android:id="@+id/navigation_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/material_blue_grey_800">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/status_bar_height">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/md_amber_800"
            android:elevation="4dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ToolbarTheme" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="583dp"
            android:layout_gravity="center_horizontal|top"
            android:background="@color/md_red_900"><![CDATA[






                android:visibility="invisible" />











            ]]>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src ="@mipmap/ic_filter_center_focus_black_24dp"
                app:backgroundTint="@color/md_yellow_900"
                fab:fab_colorPressed="@color/md_red_A400"
                android:layout_gravity="center_vertical|bottom"
                android:visibility="visible"
                android:layout_marginBottom="70dp"
                android:layout_marginLeft="15dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_como"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src ="@mipmap/ic_help_black_24dp"
                app:backgroundTint="@color/md_yellow_900"
                fab:fab_colorPressed="@color/md_red_A400"
                android:layout_gravity="center_horizontal|bottom"
                android:visibility="visible"
                android:layout_marginBottom="70dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src ="@mipmap/ic_info_black_24dp"
                app:backgroundTint="@color/md_yellow_900"
                fab:fab_colorPressed="@color/md_red_A400"
                android:layout_gravity="bottom|right"
                android:visibility="visible"
                android:layout_marginBottom="70dp"
                android:layout_marginRight="15dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="633dp"
                android:id="@+id/imgportada"
                android:src="@drawable/portada"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/imagenportada" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/SAG"
                android:id="@+id/textView33"
                android:layout_gravity="right|bottom"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginBottom="50dp"
                android:layout_marginRight="15dp" />

            <TextView
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Medir"
                android:id="@+id/textView111"
                android:layout_gravity="left|bottom"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="50dp"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/APP"
                android:id="@+id/textView22"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="50dp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="263dp"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@color/md_red_900"
                android:id="@+id/submenu"
                android:visibility="invisible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/SAG"
                    android:id="@+id/textView3"
                    android:layout_gravity="right|bottom"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_marginBottom="50dp"
                    android:layout_marginRight="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/Medir"
                    android:id="@+id/textView"
                    android:layout_gravity="left|bottom"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="50dp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/APP"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginBottom="50dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/btn_linea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src ="@mipmap/ic_straighten_black_24dp"
                    app:backgroundTint="@color/md_yellow_900"
                    fab:fab_colorPressed="@color/md_red_A400"
                    android:layout_gravity="center_vertical|bottom"
                    android:visibility="visible"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="170dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/circulos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src ="@drawable/abc_btn_radio_to_on_mtrl_015"
                    app:backgroundTint="@color/md_yellow_900"
                    fab:fab_colorPressed="@color/md_red_A400"
                    android:layout_gravity="center_horizontal|bottom"
                    android:visibility="visible"
                    android:layout_marginBottom="170dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/calculadora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src ="@mipmap/ic_dialpad_black_24dp"
                    app:backgroundTint="@color/md_yellow_900"
                    fab:fab_colorPressed="@color/md_red_A400"
                    android:layout_gravity="bottom|right"
                    android:visibility="visible"
                    android:layout_marginBottom="170dp"
                    android:layout_marginRight="15dp" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="37dp"
                    android:layout_height="33dp"
                    android:id="@+id/btn_cerrar"
                    android:layout_gravity="right|top"
                    android:background="@android:drawable/btn_dialog" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/Linea"
                    android:id="@+id/textView11"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/Circulos"
                    android:id="@+id/textView12"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:layout_marginRight="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/Calculadora"
                    android:id="@+id/textView13"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginBottom="20dp"
                    android:textColor="#ffffff"
                    android:layout_marginRight="15dp"
                    android:textStyle="bold" />
            </FrameLayout>

        </FrameLayout>

    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="@bool/fitsSystemWindows"
        app:headerLayout="@layout/navigation_drawer_header"
        app:menu="@menu/navigation_drawer_menu"
        app:theme="@style/NavigationViewTheme" />

</android.support.v4.widget.DrawerLayout>